<resources>
    <string name="app_name">Coffee and Happiness</string>

    <!-- This is a navigation bar section -->
    <string name="nav_bar_code">Code</string>
    <string name="nav_bar_menu">Menu</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_map">Map</string>
    <string name="nav_bar_account">Profile</string>

    <!-- This is a home section -->
    <string name="home_name">Coffee and Happiness</string>
    <string name="home_description">We\'re here.\nWe\`re taste.\nWe\'re always.</string>
    <string name="home_news">Our news</string>
    <string name="home_about_us">About us</string>
    <string name="home_about_us_text">Welcome to "Coffee and Happiness", where we brew more than just coffee; we cultivate moments of joy. As a young and vibrant company, we are dedicated to crafting exceptional cafes that go beyond the ordinary. Our passion lies in creating spaces where happiness is not just a fleeting feeling but a fundamental part of the experience.\n\nAt "Coffee and Happiness", we believe that true happiness is found in the little moments of life, like savoring a perfectly brewed cup of coffee or sharing a heartfelt conversation with friends. We are committed to crafting not only the finest coffee but also fostering an atmosphere that promotes positivity, community, and well-being.</string>

    <!-- This is a menu section -->
    <string name="menu_main">Main</string>
    <string name="menu_drinks">Drinks</string>
    <string name="menu_coffee">Coffee</string>
    <string name="menu_salads">Salads</string>
    <string name="menu_desserts">Desserts</string>
    <string name="menu_ice_cream">Ice cream</string>

    <string name="menu_food_rating">Rating:</string>
    <string name="menu_food_price">Price:</string>

    <string name="food_description">Description:</string>
    <string name="food_ingredients">Ingredients:</string>
    <string name="food_weight">Weight:</string>
    <string name="food_price">Price:</string>
    <string name="food_average_rating">Average rating:</string>
    <string name="food_add_review">Add review</string>
    <string name="food_view_reviews">View all reviews</string>

    <string name="food_review_add_review">Add a review</string>
    <string name="food_review_comment">Write your comment here</string>
    <string name="food_review_submit">Submit</string>


    <!-- This is an account section -->
    <string name="account_login_top_text">Login to account</string>
    <string name="account_email">Email</string>
    <string name="account_email_hint">Please, enter valid email</string>
    <string name="account_password">Password</string>
    <string name="account_password_hint">Please, enter password</string>
    <string name="account_password_eight_hint">Password must have at least eight characters</string>
    <string name="account_login_wrong_password">The password is incorrect or account doesn\'t exist</string>
    <string name="account_login_sign_in">Sign in</string>
    <string name="account_login_orLogin">Or login with</string>
    <string name="account_login_dont_have">Don\'t have an account?</string>
    <string name="account_sign_up">Sign up</string>
    <string name="account_login_forgot_password">Forgot password</string>

    <string name="account_register_top_text">Register an account</string>
    <string name="accountName">Name</string>
    <string name="account_register_name_hint">Please, enter your name</string>
    <string name="accountSurname">Surname</string>
    <string name="account_register_surname_hint">Please, enter your surname</string>
    <string name="account_register_re_enter_password">Re-enter password</string>
    <string name="account_re_enter_password_hint">Passwords must match</string>
    <string name="account_register_sign_up">Sign up</string>
    <string name="account_register_orRegister">Or sign up with</string>
    <string name="account_register_already_have">Alredy have an account?</string>
    <string name="account_user_exists_hint">A user with this email is already registered</string>

    <string name="account_main_edit">Edit account</string>
    <string name="account_main_reviews">My reviews</string>
    <string name="account_main_faq">FAQ</string>
    <string name="account_main_privacy">Privacy policy</string>
    <string name="account_main_feedback">Feedback</string>
    <string name="account_main_logout">Logout</string>

    <string name="account_main_reviews_food">Food reviews</string>
    <string name="account_main_reviews_cafe">Cafe reviews</string>

    <string name="account_edit_phone">Phone number</string>
    <string name="account_edit_phone_hint">Please, enter your phone number in correct format (380…)</string>
    <string name="account_edit_save_changes">Save changes</string>
    <string name="account_edit_change_password">Change password</string>
    <string name="account_edit_delete_account">Delete account</string>

    <string name="account_edit_change_password_old">Old password</string>
    <string name="account_edit_change_password_new">New password</string>
    <string name="account_edit_change_password_new_hint">Please, enter new password</string>
    <string name="account_edit_change_password_wrong_hint">Your old password is incorrect!</string>
    <string name="account_edit_change_password_submit">Submit</string>

    <string name="account_forgot_password_email_title">Forgot password</string>
    <string name="account_forgot_password_email_description">Enter your email, so we can send you a verification code for resetting password.</string>
    <string name="account_forgot_password_email_no_account">There is no registered account with this email</string>
    <string name="account_forgot_password_email_button">Send verification code</string>

    <string name="account_forgot_password_code_title">Verification code</string>
    <string name="account_forgot_password_code_description_1">We have sent you a six-digit verification code on your email.</string>
    <string name="account_forgot_password_code_description_2">Enter it here.</string>
    <string name="account_forgot_password_code_code_hint">Please, enter the code</string>
    <string name="account_forgot_password_code_wrong_code_hint">The code you entered is incorrect</string>
    <string name="account_forgot_password_code_button">Verify</string>

    <string name="account_forgot_password_new_password_title">New password</string>
    <string name="account_forgot_password_new_password_button">Change password</string>

    <string name="account_forgot_password_success_title">Your password was successfully changed.\nYou can close this page now.</string>

    <string name="account_feedback_text">If you have any comments or suggestions regarding the operation of the application, please, write to us by e-mail: email@gmail.com</string>

    <string name="account_privacy_policy_text">PRIVACY POLICY\n\nLast Updated: 15.09.2023\n\n1. INTRODUCTION\n\nWelcome to "CoffeeAndHappiness". We respect your privacy and are committed to protecting your personal information. This Privacy Policy is designed to help you understand how we collect, use, disclose, and safeguard your personal information. By accessing or using the App, you consent to the practices described in this Privacy Policy.\n\n2. INFORMATION WE COLLECT\n\n2.1. Information You Provide\n\n- When you use our App, you may provide us with the following personal information:\n  - Email\n  - Name\n  - Surname\n  - Phone number\n  - Photo\n\n2.2. User Data\n\n- We also collect user-generated data, including but not limited to:\n  - Reviews\n  - Food orders\n\n3. HOW WE USE YOUR INFORMATION\n\nWe may use the information we collect for various purposes, including but not limited to:\n\n- To provide and maintain the App.\n- To personalize your experience.\n- To improve our App.\n- To respond to your requests and inquiries.\n- To comply with legal obligations.\n\n4. HOW WE SHARE YOUR INFORMATION\n\nWe do not send marketing communications. However, we may share your information with third parties for the following purposes:\n\n- With service providers who help us operate and improve the App.\n- With legal authorities when required by law.\n\n5. YOUR CHOICES\n\n- You have the right to access, update, or delete your personal information.\n- You may adjust your device settings to control the collection of certain information.\n\n6. SECURITY\n\nWe take reasonable measures to protect your personal information, but no method of transmission or storage is completely secure. We cannot guarantee the security of your information.\n\n7. CHILDREN\'S PRIVACY\n\nOur App is not intended for children under the age of 13. We do not knowingly collect or maintain personal information from children.\n\n8. CHANGES TO THIS PRIVACY POLICY\n\nWe may update this Privacy Policy from time to time. The date of the latest revision will be indicated at the beginning of the policy.\n\n9. CONTACT US\n\nIf you have questions or concerns about this Privacy Policy, please contact us at coffeeandhappiness+contact@gmail.com.\n\nCoffee and Happiness\nSvobody av.\nLviv, Lviv oblast\ncoffeeandhappiness+contact@gmail.com.</string>


    <!-- This is a code section -->
    <string name="code_user_show_qr">Show your QR code to waiter</string>
    <string name="code_user_balance">Balance</string>
    <string name="code_view_your_orders">View your orders</string>

    <string name="code_unlogged_text">You have to be logged in to view this page</string>

    <string name="code_waiter_place_an_order">Place an order</string>
    <string name="code_waiter_start_right_now">Start your new order right now!</string>
    <string name="code_waiter_add_an_order">Add an order</string>
    <string name="code_waiter_sum_of_an_order">Sum of an order:</string>
    <string name="code_waiter_user_authorized">User was authorized</string>
    <string name="code_waiter_user_can_spend">User can spend points</string>
    <string name="code_waiter_place_order">Place order</string>
    <string name="code_waiter_spend_points">Spend points</string>

    <!-- This is a cafe section -->
    <string name="cafe_phone_number">Phone number:</string>


    <string name="internet_no_connection">We can\'t connect to the server</string>
    <string name="internet_no_connection_error">There is no connection to the server</string>
    <string name="empty_page_text">Wow, so empty!</string>


</resources>