<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN_STYLE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.accountfragments.forgotpasswordfragments.AccountForgotPasswordEmailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="40dp"
                android:src="@drawable/reset_password" />

            <TextView
                style="@style/ACCOUNT_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/sofiasans_straight"
                android:gravity="center"
                android:text="@string/account_forgot_password_email_title"
                android:textSize="35sp" />

            <TextView
                style="@style/HOME_NEWS_ADDITIONAL_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sofiasans_straight"
                android:gravity="center"
                android:text="@string/account_forgot_password_email_description"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ACCOUNT_ENTER_BACKGROUND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:hintTextColor="@color/default_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/accountForgotPasswordEmailText"
                    style="@style/ACCOUNT_ENTER_EMAIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/sofiasans_straight"
                    android:hint="@string/account_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/accountForgotPasswordEmailButton"
                    android:textSize="20sp"
                    android:theme="@style/ACCOUNT_CURSOR" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/accountForgotPasswordEmailHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sofiasans_straight"
                android:text="@string/account_email_hint"
                android:textColor="@color/default_red"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/accountForgotPasswordEmailNoUserHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sofiasans_straight"
                android:text="@string/account_forgot_password_email_no_account"
                android:textColor="@color/default_red"
                android:textSize="18sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accountForgotPasswordEmailButton"
                style="@style/ACCOUNT_ENTER_BUTTON"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/account_button"
                android:fontFamily="@font/sofiasans_straight"
                android:padding="15dp"
                android:text="@string/account_forgot_password_email_button"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/accountForgotPasswordEmailNoInternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/sofiasans_straight"
                android:text="@string/internet_no_connection_error"
                android:textColor="@color/default_red"
                android:textSize="18sp"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</FrameLayout>