<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN_STYLE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.accountfragments.forgotpasswordfragments.AccountForgotPasswordNewPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="40dp"
                android:src="@drawable/reset_password" />

            <TextView
                style="@style/ACCOUNT_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/sofiasans_straight"
                android:gravity="center"
                android:text="@string/account_forgot_password_new_password_title"
                android:textSize="35sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ACCOUNT_ENTER_BACKGROUND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:hintTextColor="@color/default_green"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/accountForgotPasswordNewPassword"
                    style="@style/ACCOUNT_ENTER_PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/sofiasans_straight"
                    android:hint="@string/account_edit_change_password_new"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/accountForgotPasswordReEnterPassword"
                    android:textSize="20sp"
                    android:theme="@style/ACCOUNT_CURSOR" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/accountForgotPasswordNewPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sofiasans_straight"
                android:text="@string/account_password_hint"
                android:textColor="@color/default_red"
                android:textSize="18sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ACCOUNT_ENTER_BACKGROUND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:hintTextColor="@color/default_green"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/accountForgotPasswordReEnterPassword"
                    style="@style/ACCOUNT_ENTER_PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/sofiasans_straight"
                    android:hint="@string/account_register_re_enter_password"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/accountForgotPasswordNewPasswordButton"
                    android:textSize="20sp"
                    android:theme="@style/ACCOUNT_CURSOR" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/accountForgotPasswordReEnterPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sofiasans_straight"
                android:text="@string/account_re_enter_password_hint"
                android:textColor="@color/default_red"
                android:textSize="18sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accountForgotPasswordNewPasswordButton"
                style="@style/ACCOUNT_ENTER_BUTTON"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/account_button"
                android:fontFamily="@font/sofiasans_straight"
                android:padding="15dp"
                android:text="@string/account_forgot_password_new_password_button"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/accountForgotPasswordNewPasswordNoInternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/sofiasans_straight"
                android:text="@string/internet_no_connection_error"
                android:textColor="@color/default_red"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>